// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemSelector snapshot > ItemSelector demo snapshot 0 1`] = `
<div>
  <div
    class="bui-item-selector"
    style="height: 500px;"
  >
    <div
      class="bui-scroll bui-scroll-view-scroll-y bui-item-selector-scroll-view-container tph"
    >
      <div
        class="bui-item-selector-all-item"
      >
        <div
          class="bui-item-selector-list-container"
        >
          <div>
            <div
              class="select-item-title"
              id="CRT"
            >
              当前城市
            </div>
            <div
              class="select-item-buttons"
            >
              <span
                class="bui-item-selector-item"
              >
                上海
              </span>
            </div>
          </div>
          <div>
            <div
              class="select-item-title"
              id="POS"
            >
              定位城市
            </div>
            <div
              class="select-item-buttons"
            >
              <span
                class="bui-item-selector-item"
              >
                北京
              </span>
            </div>
          </div>
          <div>
            <div
              class="select-item-title"
              id="HOT"
            >
              热门城市
            </div>
            <div
              class="select-item-buttons"
            >
              <span
                class="bui-item-selector-item"
              >
                北京
              </span>
              <span
                class="bui-item-selector-item"
              >
                上海
              </span>
              <span
                class="bui-item-selector-item"
              >
                广州
              </span>
            </div>
          </div>
          <div>
            <div
              class="select-item-title"
              id="A"
            >
              A
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                安康
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                鞍山
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-item-title"
              id="B"
            >
              B
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                巴音郭楞
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                巴中
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-item-title"
              id="C"
            >
              C
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                沧州
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                长春
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-item-title"
              id="D"
            >
              D
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                大理
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                大连
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bui-item-selector-index-container left-in"
    >
      <ul
        class="bui-item-selector-index-list"
      >
        <li
          class="bui-item-selector-index-item"
          data-code="CRT"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          当前
        </li>
        <li
          class="bui-item-selector-index-item"
          data-code="POS"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          定位
        </li>
        <li
          class="bui-item-selector-index-item"
          data-code="HOT"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          常用
        </li>
        <li
          class="bui-item-selector-index-item"
          data-code="A"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          A
        </li>
        <li
          class="bui-item-selector-index-item"
          data-code="B"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          B
        </li>
        <li
          class="bui-item-selector-index-item"
          data-code="C"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          C
        </li>
        <li
          class="bui-item-selector-index-item"
          data-code="D"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          D
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ItemSelector snapshot > ItemSelector demo snapshot 0 2`] = `
<div>
  <div
    class="bui-item-selector"
    style="height: 500px;"
  >
    <div
      class="bui-item-selector-title"
    >
      自定义Index
      <div
        class="bui-item-selector-btn-close"
      >
        ✕
      </div>
    </div>
    <div
      class="bui-scroll bui-scroll-view-scroll-y bui-item-selector-scroll-view-container tph container-has-title"
    >
      <div
        class="bui-item-selector-all-item"
      >
        <div
          class="bui-item-selector-list-container"
        >
          <div>
            <div
              class="select-item-title"
              id="FRT"
            >
              Fruit
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                Bannar
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Apple
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Grape
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Pear
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Orange
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Pineapple
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Kiwi
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Watermelon
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-item-title"
              id="TFC"
            >
              交通工具
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                汽车
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                飞机
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                火车
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                卡车
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                轮船
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                公共汽车
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                大巴士
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                自行车
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                徒步
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                滑板车
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                三轮车
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-item-title"
              id="SIY"
            >
              Stationery
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                Bag
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Ruler
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Pen
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Pencil
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Ruler
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Rubber
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Pencilcase
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Desk
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                Lamp
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-item-title"
              id="Main"
            >
              Customer
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                自定义数据
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                测试1
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                测试2
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                测试3
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                测试4
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                测试4
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                测试4
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                测试4
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                测试4
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                测试4
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                测试4
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bui-item-selector-index-container left-in item-index-has-title"
    >
      <ul
        class="bui-item-selector-index-list"
      >
        <li
          class="bui-item-selector-index-item"
          data-code="FRT"
          style="max-height: calc((0vh - 6vmin) / 4);"
        >
          果
        </li>
        <li
          class="bui-item-selector-index-item"
          data-code="TFC"
          style="max-height: calc((0vh - 6vmin) / 4);"
        >
          通
        </li>
        <li
          class="bui-item-selector-index-item"
          data-code="SIY"
          style="max-height: calc((0vh - 6vmin) / 4);"
        >
          文
        </li>
        <li
          class="bui-item-selector-index-item"
          data-code="Main"
          style="max-height: calc((0vh - 6vmin) / 4);"
        >
          Main
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ItemSelector snapshot > ItemSelector demo snapshot 0 3`] = `
<div>
  <div
    class="bui-item-selector"
    style="height: 500px;"
  >
    <div
      class="bui-item-selector-title"
    >
      选择Item
      <div
        class="bui-item-selector-btn-close"
      >
        ✕
      </div>
    </div>
    <div
      class="bui-scroll bui-scroll-view-scroll-y bui-item-selector-scroll-view-container tph container-has-title"
    >
      <div
        class="bui-item-selector-all-item"
      >
        <div
          class="bui-item-selector-list-container"
        >
          <div>
            <div
              class="select-item-title"
              id=""
            >
              当前城市
            </div>
            <div
              class="select-item-buttons"
            >
              <span
                class="bui-item-selector-item"
              >
                上海
              </span>
            </div>
          </div>
          <div>
            <div
              class="select-item-title"
              id=""
            >
              定位城市
            </div>
            <div
              class="select-item-buttons"
            >
              <span
                class="bui-item-selector-item"
              >
                北京
              </span>
            </div>
          </div>
          <div>
            <div
              class="select-item-title"
              id=""
            >
              热门城市
            </div>
            <div
              class="select-item-buttons"
            >
              <span
                class="bui-item-selector-item"
              >
                北京
              </span>
              <span
                class="bui-item-selector-item"
              >
                上海
              </span>
              <span
                class="bui-item-selector-item"
              >
                广州
              </span>
            </div>
          </div>
          <div>
            <div
              class="select-item-title"
              id=""
            >
              A
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                安康
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                鞍山
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-item-title"
              id=""
            >
              B
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                巴音郭楞
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                巴中
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-item-title"
              id=""
            >
              C
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                沧州
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                长春
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-item-title"
              id=""
            >
              D
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                大理
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                大连
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemSelector snapshot > ItemSelector demo snapshot 0 4`] = `
<div>
  <div
    class="bui-item-selector"
    style="height: 500px;"
  >
    <div
      class="bui-scroll bui-scroll-view-scroll-y bui-item-selector-scroll-view-container tph"
    >
      <div
        class="bui-item-selector-all-item"
      >
        <div
          class="bui-item-selector-list-container"
        >
          <div>
            <div
              class="select-item-title"
              id=""
            >
              当前城市
            </div>
            <div
              class="select-item-buttons"
            >
              <span
                class="bui-item-selector-item"
              >
                上海
              </span>
            </div>
          </div>
          <div>
            <div
              class="select-item-title"
              id=""
            >
              定位城市
            </div>
            <div
              class="select-item-buttons"
            >
              <span
                class="bui-item-selector-item"
              >
                北京
              </span>
            </div>
          </div>
          <div>
            <div
              class="select-item-title"
              id=""
            >
              热门城市
            </div>
            <div
              class="select-item-buttons"
            >
              <span
                class="bui-item-selector-item"
              >
                北京
              </span>
              <span
                class="bui-item-selector-item"
              >
                上海
              </span>
              <span
                class="bui-item-selector-item"
              >
                广州
              </span>
            </div>
          </div>
          <div>
            <div
              class="select-item-title"
              id=""
            >
              A
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                安康
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                鞍山
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-item-title"
              id=""
            >
              B
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                巴音郭楞
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                巴中
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-item-title"
              id=""
            >
              C
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                沧州
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                长春
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-item-title"
              id=""
            >
              D
            </div>
            <ul
              class="bui-item-selector-list"
            >
              <li
                class="bui-item-selector-list-item"
              >
                大理
              </li>
              <li
                class="bui-item-selector-list-item"
              >
                大连
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
